Reseting project to allow multiplatform development